kubefiles/BasicYamls/get-gatling-data.yaml
apiVersion: v1
kind: Pod
metadata:
  name: get-gatling-data
  namespace: loadtester
spec:
  containers:
    - name: get-gatling-data
      image: busybox:1.32
      command: [ "sleep" ]
      args: [ "infinity" ]
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - mountPath: /home
          name: "gatlingvol"
  volumes:
    - name: gatlingvol
      persistentVolumeClaim:
        claimName: gatling-results-claim-new
  restartPolicy: Always
  nodeName: k8s-cluster3-7
