kubefiles/BasicYamls/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: database-minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio-pvc-new
      containers:
      - env:
        - name: MINIO_DEFAULT_BUCKETS
          value: imagerepo:public
        - name: MINIO_ROOT_USER
          value: minio99
        - name: MINIO_ROOT_PASSWORD
          value: minio123
        image: bitnami/minio
        imagePullPolicy: Always
        name: minio
        ports:
        - containerPort: 9000
          protocol: TCP
        - containerPort: 9001
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: storage # must match the volume name, above
          mountPath: "/storage"
