kubefiles/BasicYamls/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: mongodb-deployment
  namespace: database-mongo
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongo
          image: mongo
          args: ["--dbpath","/data/db"]
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: "mongo-data-dir"
              mountPath: "/data/db"
      volumes:
        - name: "mongo-data-dir"
          persistentVolumeClaim:
            claimName: "mongo-pvc-new"
