kubefiles/BasicYamls/rabbit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-deployment
  namespace: broker-rabbit
spec:
  selector:
    matchLabels:
      app: rabbit
  template:
    metadata:
      labels:
        app: rabbit
    spec:
      containers:
      - name: rabbit
        image: rabbitmq:3-management
        ports:
        - containerPort: 15672
          name: management
        - containerPort: 5672
          name: console
        resources:
            limits:
              cpu: "1"
              memory: 2000Mi
            requests:
              cpu: "1"
              memory: 2000Mi
