kubefiles/BasicYamls/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  selector:
    app: minio
  type: NodePort
  ports:
  - port: 9001
    targetPort: 9001
    nodePort: 30000
