kubefiles/BasicYamls/ota-tester-pi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ota-tester-pi-service
  namespace: ota-tester
spec:
  selector:
    app: ota-tester-pi
  ports:
  - port: 8080
    targetPort: 8080
