kubefiles/BasicYamls/ingress-rabbit.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbit-ingress
  namespace: broker-rabbit
  annotations:
    nginx.ingress.kubernetes.io/client_max_body_size: "900m"
    nginx.ingress.kubernetes.io/proxy-body-size: "900m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: ota-broker-rabbit-management.com
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: rabbit-service
                port: 
                  number: 15672
    - host: ota-broker-rabbit-console.com
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: rabbit-service
                port: 
                  number: 5672
